--- a/sending email to multiple recipients/sending_emails.ipynb
+++ b/sending email to multiple recipients/sending_emails.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Импортируем нужные пакеты"
+    "**Импортируем нужные пакеты**"
    ]
   },
   {
@@ -22,13 +22,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Работа с excel файлом, который содержит адреса для рассылки**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "открываем нужный файл - test_for_emails.xlsx"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wb = openpyxl.load_workbook('test_for_emails.xlsx') #открываем файл\n",
-    "sheet = wb['Лист1'] #задаем лист для просмотра"
+    "wb = openpyxl.load_workbook('test_for_emails.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Указываем название листа в файле из которого будем брать информацию для рассылки"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sheet = wb['Лист1']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создаем словарь, куда вносим отправителей. **Важно!** Первый столбец: имя отправителя. Второй столбец: Электронные адреса отправителей."
    ]
   },
   {
@@ -37,11 +73,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customers = {} #создаем словарь, куда заносим отправителей в виде Имя: почта\n",
+    "customers = {}\n",
     "name = 1\n",
     "\n",
     "for i, x in sheet.values:\n",
     "     customers[i] = x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Проверка"
    ]
   },
   {
@@ -61,7 +104,21 @@
     }
    ],
    "source": [
-    "customers #проверка"
+    "customers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Работа с сообьщением**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создание сообщения. В данном случае используем формат html."
    ]
   },
   {
@@ -85,16 +142,6 @@
     }
    ],
    "source": [
-    "# import necessary packages\n",
-    "import smtplib\n",
-    "from email.mime.multipart import MIMEMultipart\n",
-    "from email.mime.text import MIMEText\n",
-    "from email.mime.image import MIMEImage\n",
-    "\n",
-    "from email.mime.base import MIMEBase\n",
-    "from email import encoders\n",
-    "\n",
-    "# create message object instance\n",
     "msg = MIMEMultipart()\n",
     "\n",
     "message = \"\"\"\\\n",
@@ -127,48 +174,21 @@
     "  </body>\n",
     "</html>\n",
     "\n",
-    "\"\"\"\n",
-    " \n",
-    "\n",
-    "#setup the parameters of the message\n",
-    "password = 'PASS'\n",
-    "msg['From'] = 'e-mail'\n",
-    "#msg['To'] = email\n",
-    "msg['Subject'] = 'Тема письма'\n",
-    "\n",
-    "# attach image to message body\n",
-    "filename = \"special_offer.pdf\"\n",
-    "attachment = open(\"special_offer.pdf\", \"rb\")\n",
-    "\n",
-    "part = MIMEBase('application', 'octet-stream')\n",
-    "part.set_payload((attachment).read())\n",
-    "encoders.encode_base64(part)\n",
-    "part.add_header('Content-Disposition', \"attachment; filename= %s\" % filename)\n",
-    "\n",
-    "msg.attach(part)\n",
-    "\n",
-    "# add in the message body\n",
-    "msg.attach(MIMEText(message, 'html'))\n",
-    " \n",
-    "#create server\n",
-    "server = smtplib.SMTP('smtp.gmail.com: 587')\n",
-    " \n",
-    "server.starttls()\n",
-    " \n",
-    "# Login Credentials for sending the mail\n",
-    "server.login(msg['From'], password)\n",
-    " \n",
-    "#send the message via the server.\n",
-    "\n",
-    "for name, email in customers.items():\n",
-    "    try:\n",
-    "        #msg['To'] = email\n",
-    "        server.sendmail(msg['From'], email, msg.as_string())\n",
-    "        print(f'Отправлено на адрес: {(email)}')\n",
-    "    except:\n",
-    "        print(f'--> Ошибка отправки на: {(email)}. Адресат: {(name)}.')\n",
-    "server.quit()\n",
-    "#отправка на 200 адресов, потом идет закрытие соединения"
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Настройка отправки сообщения**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Пароль от аккаунат"
    ]
   },
   {
@@ -176,7 +196,187 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "password = 'PASS'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Электронной почта с которой будет отправка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg['From'] = 'e-mail'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тема письма"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg['Subject'] = 'Тема письма'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Вложения к письму**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Имя вложения, которое будет видеть адреса"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"special_offer.pdf\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Путь местонахождения вложения"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attachment = open(\"special_offer.pdf\", \"rb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Настройка сообщения и вложений"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part = MIMEBase('application', 'octet-stream')\n",
+    "part.set_payload((attachment).read())\n",
+    "encoders.encode_base64(part)\n",
+    "part.add_header('Content-Disposition', \"attachment; filename= %s\" % filename)\n",
+    "\n",
+    "msg.attach(part)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задаем, что будет в самом сообщении и передаем формат сообщения"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg.attach(MIMEText(message, 'html'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Подключение**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создаем подключение. В данном случае - это google"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "server = smtplib.SMTP('smtp.gmail.com: 587')\n",
+    " \n",
+    "server.starttls()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Логинимся для отправки сообщения"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "server.login(msg['From'], password)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Отправка сообщения**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, email in customers.items():\n",
+    "    try:\n",
+    "        server.sendmail(msg['From'], email, msg.as_string())\n",
+    "        print(f'Отправлено на адрес: {(email)}')\n",
+    "    except:\n",
+    "        print(f'--> Ошибка отправки на: {(email)}. Адресат: {(name)}.')\n",
+    "server.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--> отправка на 200 адресов, потом идет закрытие соединения"
+   ]
   }
  ],
  "metadata": {
