--- a/sending email to multiple recipients/sending_emails.ipynb
+++ b/sending email to multiple recipients/sending_emails.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Рассылка электронных писем"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Импортируем нужные пакеты**"
    ]
   },
@@ -25,14 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Работа с excel файлом, который содержит адреса для рассылки**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "открываем нужный файл - test_for_emails.xlsx"
+    "**Работа с excel файлом**"
    ]
   },
   {
@@ -41,38 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wb = openpyxl.load_workbook('test_for_emails.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Указываем название листа в файле из которого будем брать информацию для рассылки"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sheet = wb['Лист1']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Создаем словарь, куда вносим отправителей. **Важно!** Первый столбец: имя отправителя. Второй столбец: Электронные адреса отправителей."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#открываем нужный файл - test_for_emails.xlsx\n",
+    "wb = openpyxl.load_workbook('test_for_emails.xlsx')\n",
+    "\n",
+    "#Указываем название листа в файле из которого будем брать информацию для рассылки\n",
+    "sheet = wb['Лист1']\n",
+    "\n",
+    "#Создаем словарь, куда вносим отправителей. **Важно!** Первый столбец: имя отправителя. Второй столбец: Электронные адреса отправителей.\n",
     "customers = {}\n",
     "name = 1\n",
     "\n",
@@ -84,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Проверка"
+    "Проверяем, как произошла запись в словарь"
    ]
   },
   {
@@ -104,18 +79,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Создание сообщения. В данном случае используем формат html."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Создание сообщения. В данном случае используем формат html.\n",
     "msg = MIMEMultipart()\n",
     "\n",
     "message = \"\"\"\\\n",
@@ -154,50 +123,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Пароль от аккаунат"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "password = 'PASS'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Электронной почта с которой будет отправка"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msg['From'] = 'e-mail'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Тема письма"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Пароль от аккаунат\n",
+    "password = 'PASS'\n",
+    "\n",
+    "#Электронной почта с которой будет отправка\n",
+    "msg['From'] = 'e-mail'\n",
+    "\n",
+    "#Тема письма\n",
     "msg['Subject'] = 'Тема письма'"
    ]
   },
@@ -209,71 +146,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Имя вложения, которое будет видеть адреса"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"special_offer.pdf\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Путь местонахождения вложения"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attachment = open(\"special_offer.pdf\", \"rb\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Настройка сообщения и вложений"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Имя вложения, которое будет видеть адресат\n",
+    "filename = 'special_offer.pdf'\n",
+    "\n",
+    "#Путь местонахождения вложения\n",
+    "attachment = open(\"special_offer.pdf\", \"rb\")\n",
+    "\n",
+    "#Настройка сообщения и вложений\n",
     "part = MIMEBase('application', 'octet-stream')\n",
     "part.set_payload((attachment).read())\n",
     "encoders.encode_base64(part)\n",
     "part.add_header('Content-Disposition', \"attachment; filename= %s\" % filename)\n",
     "\n",
-    "msg.attach(part)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Задаем, что будет в самом сообщении и передаем формат сообщения"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "msg.attach(part)\n",
+    "\n",
+    "#Задаем, что будет в самом сообщении и передаем формат сообщения\n",
     "msg.attach(MIMEText(message, 'html'))"
    ]
   },
@@ -285,36 +177,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Создаем подключение. В данном случае - это google"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Создаем подключение. В данном случае - это google\n",
     "server = smtplib.SMTP('smtp.gmail.com: 587')\n",
     " \n",
-    "server.starttls()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Логинимся для отправки сообщения"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "server.starttls()\n",
+    "\n",
+    "#Логинимся для отправки сообщения\n",
     "server.login(msg['From'], password)"
    ]
   },
@@ -344,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--> отправка на 200 адресов, потом идет закрытие соединения"
+    "--> отправка на 200 адресов, потом идет закрытие соединения. Доделать код."
    ]
   }
  ],
